Remove unnecessary java option in scripted tests